--- a/style.css
+++ b/style.css
@@ -1,11 +1,58 @@
+body {
+  background-position: center;
+	width: 100%;
+  background-color: pink;
+}
+a:link, a:visited {
+  color: black;
+  text-decoration: none;
+  padding: 1px 12px;
+  text-align: center;
+  display: inline-block;
+}
+
+a:hover, a:active {
+  color: gray;
+  text-decoration: none;
+}
 .navigation {
-  font-family: 'Srisakdi', cursive;
+  font-family: 'Montserrat', sans-serif;
   font-weight: 300;
   text-align: center;
-  font-size: small;
+  font-size: 20px;
+  color: green
 }
-#sec1 p {
+
+.navigation ul li {
+  display:inline;
+}
+.sec1 p {
   color: #1E90FF;
   text-align: center;
-  font-family: 'Srisakdi', cursive;
+  font-family: 'Montserrat', sans-serif;
+}
+h1 {
+  letter-spacing: 2px;
+  text-align: center;
+  font-family: 'ZCOOL QingKe HuangYou', cursive;
+  font-weight: 300;
+  font-size: 75px;
+}
+.sec2  {
+    width: 30%;
+	float: left;
+    font-size: 2.5em;
+    text-align: left;
+}
+.sec3  {
+    width: 30%;
+	float: left;
+    font-size: 2.5em;
+    text-align: left;
+}
+.sec4  {
+    width: 30%;
+	float: left;
+    font-size: 2.5em;
+    text-align: left;
 }
