--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   background-position: center;
 	width: 100%;
-  background-color: pink;
+  background-color: lightblue;
 }
 a:link, a:visited {
   color: black;
@@ -20,16 +20,17 @@ a:hover, a:active {
   font-weight: 300;
   text-align: center;
   font-size: 20px;
-  color: green
+  list-style-type: none;
 }
 
 .navigation ul li {
   display:inline;
 }
 .sec1 p {
-  color: #1E90FF;
+  color: black;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
+  font-weight: 500;
+  font-size: 20px;
 }
 h1 {
   letter-spacing: 2px;
@@ -39,20 +40,63 @@ h1 {
   font-size: 75px;
 }
 .sec2  {
-    width: 30%;
+    width: 33%;
 	float: left;
     font-size: 2.5em;
     text-align: left;
 }
+h2 {
+	text-align: center;
+	text-decoration: underline;
+	font-family: 'Merriweather', serif;
+}
+h3 {
+	text-align: center;
+	text-decoration: underline;
+	font-family: 'Merriweather', serif;
+}
+h4 {
+	text-align: center;
+	text-decoration: underline;
+	font-family: 'Merriweather', serif;
+}
+.sec2 ul li  {
+	font-size: 	0.75em;
+    text-align: center;
+	list-style-type: none;
+}
+.sec3 ul li  {
+	font-size: 	0.75em;
+	list-style-type: none;
+}
+
 .sec3  {
-    width: 30%;
+    width: 33%;
 	float: left;
     font-size: 2.5em;
     text-align: left;
 }
 .sec4  {
-    width: 30%;
+    width: 33%;
 	float: left;
     font-size: 2.5em;
     text-align: left;
+}
+#vdsc {
+	float: center;
+	position: relative;
+	padding: 10px 150px;
+	width: 50%;
+}
+#vdbc {
+	float: center;
+	position: relative;
+	padding: 10px 150px;
+	width: 50%;
+}
+#iit {
+	float: center;
+	position: relative;
+	padding: 10px 150px;
+	width: 50%;
 }
