--- a/style.css
+++ b/style.css
@@ -40,72 +40,74 @@ h1 {
   font-size: 75px;
 }
 .sec2  {
-    width: 33%;
-	float: left;
-    font-size: 2.5em;
-    text-align: left;
+  width: 33%;
+  float: left;
+  font-size: 2.5em;
+  text-align: left;
 }
 h2 {
-	text-align: center;
-	text-decoration: underline;
-	font-family: 'Merriweather', serif;
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Merriweather', serif;
 }
 h3 {
-	text-align: center;
-	text-decoration: underline;
-	font-family: 'Merriweather', serif;
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Merriweather', serif;
 }
 h4 {
-	text-align: center;
-	text-decoration: underline;
-	font-family: 'Merriweather', serif;
+  text-align: center;
+  text-decoration: underline;
+  font-family: 'Merriweather', serif;
 }
 .sec2 ul li  {
-	font-size: 	0.75em;
-    text-align: center;
-	list-style-type: none;
+  font-size:  0.75em;
+  text-align: center;
+  list-style-type: none;
 }
 .sec3 ul li  {
-	font-size: 	0.75em;
-	list-style-type: none;
+  font-size: 	0.75em;
+  list-style-type: none;
 }
 
 .sec3  {
-    width: 33%;
-	float: left;
-    font-size: 2.5em;
-    text-align: left;
+  width: 33%;
+  float: left;
+  font-size: 2.5em;
+  text-align: left;
 }
 .sec4  {
-    width: 33%;
-	float: left;
-    font-size: 2.5em;
-    text-align: left;
+  width: 33%;
+  float: left;
+  font-size: 2.5em;
+  text-align: left;
 }
 #vdsc {
-	position: relative;
-	padding: 10px 150px;
-	width: 50%;
+  position: relative;
+  padding: 10px 150px;
+  width: 50%;
 }
 #vdbc {
-	position: relative;
-	padding: 10px 150px;
-	width: 50%;
+  position: relative;
+  padding: 10px 150px;
+  width: 50%;
 }
 #iit {
-	position: relative;
-	padding: 10px 150px;
-	width: 50%;
+  position: relative;
+  padding: 10px 150px;
+  width: 50%;
 }
 #mu {
-	position: relative;
-	padding: 1px 675px;
-	width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 #ots {
-	position: relative;
-	padding: 1px 665px;
-	width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 .sec5 p {
   font-family: 'PT Sans', sans-serif;color: black;
@@ -118,21 +120,24 @@ h4 {
   font-size: 20px;
 }
 .ytvid h3 {
-	font-weight: 500;
-    font-size: 30px;
+  font-weight: 500;
+  font-size: 30px;
 	
 }
 #c1 {
-	position: relative;
-	padding: 10px 675px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 #oct {
-	position: relative;
-	padding: 1px 665px;
-	width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
 #cea {
-	position: relative;
-	padding: 1px 670px;
-	width: 30%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 30%;
 }
