--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,6 @@ a:link, a:visited {
   text-align: center;
   display: inline-block;
 }
-
 a:hover, a:active {
   color: gray;
   text-decoration: none;
@@ -22,7 +21,6 @@ a:hover, a:active {
   font-size: 20px;
   list-style-type: none;
 }
-
 .navigation ul li {
   display:inline;
 }
@@ -39,48 +37,20 @@ h1 {
   font-weight: 300;
   font-size: 75px;
 }
-.sec2  {
+.sec2, .sec3, .sec4  {
   width: 33%;
   float: left;
   font-size: 2.5em;
   text-align: left;
 }
-h2 {
+h2, h3, h4 {
   text-align: center;
   text-decoration: underline;
   font-family: 'Merriweather', serif;
 }
-h3 {
-  text-align: center;
-  text-decoration: underline;
-  font-family: 'Merriweather', serif;
-}
-h4 {
-  text-align: center;
-  text-decoration: underline;
-  font-family: 'Merriweather', serif;
-}
-.sec2 ul li  {
-  font-size:  0.75em;
-  
+.sec2 ul li, .sec3 ul li  {
+  font-size:  0.75em;  
   list-style-type: none;
-}
-.sec3 ul li  {
-  font-size: 	0.75em;
-  list-style-type: none;
-}
-
-.sec3  {
-  width: 33%;
-  float: left;
-  font-size: 2.5em;
-  text-align: left;
-}
-.sec4  {
-  width: 33%;
-  float: left;
-  font-size: 2.5em;
-  text-align: left;
 }
 #vdsc {
   display: block;
@@ -112,20 +82,15 @@ h4 {
   margin-right: auto;
   width: 30%;
 }
-.sec5 p {
-  font-family: 'PT Sans', sans-serif;color: black;
-  font-weight: 500;
-  font-size: 20px;
-}
-.sec6 p {
+.sec5 p, .sec6 p {
   font-family: 'PT Sans', sans-serif;
+  color: black;
   font-weight: 500;
   font-size: 20px;
 }
 .ytvid h3 {
   font-weight: 500;
   font-size: 30px;
-	
 }
 #c1 {
   display: block;
