--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,4 +1,4 @@
-@media only screen and (max-width: 800px) {
+@media only screen and (min-width: 800px) {
 body {
   background-position: center;
   width: 100%;
