--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,4 +1,9 @@
 @media only screen and (max-width: 400px) {
+body {
+  background-position: center;
+  width: 100%;
+  background-color: lightgreen;
+}
 #champ {
   display: block;
   margin-left: auto;
