--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -1,32 +1,42 @@
-@media only screen and (max-width: 400px) {
+@media only screen and (min-width: 1000px) {
 body {
   background-position: center;
   width: 100%;
-  background-color: lightgreen;
+  background-color: lightblue;
 }
 #champ {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
+  padding: 500px 1320px;
 }
 #mu {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
 }
 #ots {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
 }
 .sec5 p, .sec6 p {
   font-family: 'PT Sans', sans-serif;
   color: black;
   font-weight: 500;
   font-size: 20px;
+  float: left;
+  position: relative;
+  padding: 0px 600px;
 }
 .ytvid h3 {
   font-weight: 500;
@@ -42,17 +52,24 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
+  padding: 500px 1320px;
 }
 #oct {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
 }
 #cea {
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 30%;
+  float: left;
+  position: absolute;
 }
 }
