--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -73,3 +73,10 @@ body {
   position: absolute;
 }
 }
+@media only screen and (max-width: 400px) {
+body {
+  background-position: center;
+  width: 100%;
+  background-color: white;
+}
+}
